-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0 Beta1
-
None
-
-
4cbc25f37 (dev), 8f68df62b (6.5), e9f53d023 (dev)
If I go by Ulf's blog posts and the QQC2 docs, this simple example (just an extended QtCreator template app) should work fine: see the attached main.qml. I do however get a runtime error:
qrc:/addqmltest/main.qml:20: ReferenceError: Overlay is not defined qrc:/addqmltest/main.qml:19: ReferenceError: Overlay is not defined
If I replace the first include with QtQuick.Controls, it works, but I loose the benefit of compile-time style selection.
The same happens, if you remove the imports completely and hardcode the IMPORTS via CMake/qt_add_qml_module (not in this simple example, but my bigger test app where I first encountered this problem)
The same happens when importing .Fusion instead of .Material.
- is duplicated by
-
QTBUG-109299 Overlay seems to be unknown to the typesystem
-
- Closed
-
-
QTBUG-109402 When importing a specific Qt Quick Controls style, things like standalone attached types aren't available
-
- Closed
-
-
QTBUG-104681 Include Overlay Qml type in Material, Universal (...) themes
-
- Closed
-
For Gerrit Dashboard: QTBUG-104768 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
449735,4 | Controls: Move QtQuick.Controls.impl import to QtQuick.Controls.Basic | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
450188,2 | Controls: Move QtQuick.Controls.impl import to QtQuick.Controls.Basic | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
547022,4 | Use document imports of QtQuick.Controls.impl, not qmldir-imports | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |