Use document imports of QtQuick.Controls.impl, not qmldir-imports

qmldir-imports are transitive, meaning that we were exposing all types
from QtQuick.Controls.impl each time QtQuick.Controls was imported.

This patch removes these transitive qmldir-imports by moving the
foreign type declarations for QQuickOverlay and
QQuickSplitHandleAttached into the Basic style (which is always
imported by every style as a final fallback).

Task-number: QTBUG-104768
Task-number: QTBUG-123103
Change-Id: Ia0ff778a88a38bb872730e055631dc924456d7be
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>