src/quickcontrols/basic/qtquickcontrols2basicforeign.cpp
@@ -1,10 +1,10 @@
-// Copyright (C) 2022 The Qt Company Ltd.
+// Copyright (C) 2024 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only
 
-#include "qtquickcontrols2foreign_p.h"
+#include "qtquickcontrols2basicforeign_p.h"
 
 QT_BEGIN_NAMESPACE
 
 QT_END_NAMESPACE
 
-#include "moc_qtquickcontrols2foreign_p.cpp"
+#include "moc_qtquickcontrols2basicforeign_p.cpp"
