src/quickcontrols/basic/qtquickcontrols2basicforeign_p.h
@@ -1,7 +1,7 @@
-// Copyright (C) 2020 The Qt Company Ltd.
+// Copyright (C) 2024 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only
-#ifndef QTQUICKCONTROLS2FOREIGN_P_H
-#define QTQUICKCONTROLS2FOREIGN_P_H
+#ifndef QTQUICKCONTROLS2BASICFOREIGN_P_H
+#define QTQUICKCONTROLS2BASICFOREIGN_P_H
 
 #include <QtQml/qqml.h>
 #include <QtQuickTemplates2/private/qquickoverlay_p.h>
@@ -48,4 +48,4 @@ struct QQuickSplitHandleAttachedForeign
 
 QT_END_NAMESPACE
 
-#endif // QTQUICKCONTROLS2FOREIGN_P_H
+#endif // QTQUICKCONTROLS2BASICFOREIGN_P_H
