src/quickcontrols/ios/impl/DialogButtonBoxDelegate.qml
@@ -3,6 +3,7 @@
 
 import QtQuick
 import QtQuick.Controls
+import QtQuick.Controls.impl
 import QtQuick.Controls.iOS.impl
 
 Button {
